# sample-augment

./: .gitignore  .gitmodules  README.md  config.json  config_ViT_100e.json  config_ViT_100e_noda.json  config_colab.json  config_synth_full-da.json  environment_cpu.yml  environment_cuda.yml  environment_py37_stylegan.yml  old_pyproject.toml  pyproject.toml  setup.cfg  setup.py
docs/: Michel_99_base_line_DenseNet_201_PyTorch.ipynb
experiments/: efficient-l-naive.json  s02-synth-p-test.json  s09-cguided-p10.json  vit-naive.json
experiments/architecture-configs/: densenet-naive.json
experiments/architecture-runs/: DenseNet-naive_manual.json  EfficientNetL-naive_5d4b8.json  EfficientNetS-naive_15705.json  ViT-naive_manual.json
experiments/baseline-configs/: b00-baseline.json  b01-low-lr.json  b02-high-lr.json  b03-lr-scheduling.json  b04-lr-scheduling-gamma.json  b05-small-batch.json  b06-large-batch.json  b07-color-aug.json  b08-flip-aug.json  b09-geom-aug.json  b10-full-aug.json  b11-full-aug-lr.json  b12-full-aug-strength.json
experiments/baseline-runs/: b00-baseline_b48dd.json  b01-low-lr_9876e.json  b02-high-lr_b1f5e.json  b03-lr-scheduling_1de59.json  b04-lr-scheduling-gamma_43699.json  b05-small-batch_9a189.json  b06-large-batch_1dadb.json  b07-color-aug_8683e.json  b08-flip-aug_e51e2.json  b09-geom-aug_7f951.json  b10-full-aug_5983a.json
experiments/baseline-runs-extra/: b11-full-aug-lr_9a727.json  b12-full-aug-strength_a97bc.json
experiments/class-base-configs/: densenet-naive.json  efficient-s-naive.json  resnet-naive.json
experiments/sampling-configs/: 00-debug.json  01-addition-for-merging.json  s00-4strats.json  s00-baseline.json  s01-baseline.json  s03-synth-p05.json  s04-synth-p10.json  s05-synth-p15.json  s06-synth-p20.json  s07-synth-p25.json  s08-synth-p30.json  s10-detail-p00.json  s11-detail-p05.json  s12-detail-p075.json  s13-detail-p10.json  s14-detail-p125.json  s15-entropy-guidance.json  s16-unified-generator.json  s17-synth_p_0_check.json  s17-synth_p_0_check_random.json  s18-synth_p_verification.json
experiments/sampling-runs/: 00-debug_58a76.json  00-debug_c2f5b.json  01-addition-for-merging_94660.json  s00-baseline_9fea4.json  s01-baseline_932ad.json  s02-synth-p_1f059.json  s03-synth-p05_fe349.json  s04-synth-p10_070e8.json  s05-synth-p15_4a2a6.json  s06-synth-p20_3e91d.json  s07-synth-p25_afb08.json  s08-synth-p30_49f80.json  s10-detail-p00_53cd9.json  s11-detail-p05_de571.json  s12-detail-p075_8821e.json  s13-detail-p10_7bf32.json  s14-detail-p125_ec492.json  s15-entropy-guidance_21b4f.json  s16-unified-generator_d8710.json  s17-synth_p_0_check_3285e.json  s17-synth_p_0_check_random_750cc.json  s18-synth_p_verification_65ae0.json
notebooks/: Label Exploration.ipynb
sample_augment/: __init__.py  classifier_baseline.py  cli.py  config.py  experiment.py  experiment_cli.py  main.py  main_eval_classifier.py  main_multiseed.py  main_test_classifier.py  main_test_gc10mini.py  params.py
sample_augment/core/: __init__.py  artifact.py  config.py  experiment.py  persistent_store.py  step.py  step_id.py  store.py
sample_augment/data/: artifact.py  dataset.py  download_gc10.py  imagefolder_to_tensors.py  load_dataset.py  persistent_store.py  state.py  state_store.py  synth_augment.py  synth_data.py  train_test_split.py
sample_augment/data_package/: dataset.py  train_test_split.py
sample_augment/models/: classifier.py  discriminator.py  evaluate_architecture.py  generator.py  (+14 more)
sampling_aug/: __init__.py  config.json  config_prototype.py  main.py  prototype.py  sampling_aug.py
(+136 files in other folders)
