[metadata]
name = sample-augment
version = 0.1.2
description = Thesis Project on Sampling Strategies for Synthetic Data Augmentation.
long_description = file: README.md
long_description_content_type = text/markdown
author = Nils Wallenfang
license = MIT License

[options]
python_requires = >=3.7
install_requires =
    kaggle
    click
    python-dotenv>=0.5.1
    xmltodict
    matplotlib
    numpy
    torch
    torchvision
    torchmetrics
    tqdm
    pillow
    scikit-learn
    lightning
    psutil
    scipy
    pydantic
packages = find:
;[options.packages.find]
;where = sample_augment
;include =
;    sampling_aug*
;    dnnlib

[options.entry_points]
console_scripts =
    sample-augment = sample_augment.main:main