[metadata]
name = sample-augment
version = 0.1.2
description = Thesis Project on Sampling Strategies for Synthetic Data Augmentation.
long_description = file: README.md
long_description_content_type = text/markdown
author = Nils Wallenfang
license = MIT License

[options]
python_requires = >=3.7
install_requires =
    kaggle
    click
    python-dotenv>=0.5.1
    xmltodict
    matplotlib
    numpy
    torch
    torchvision
    torchmetrics
    tqdm
    pillow
    scikit-learn
    lightning
    psutil
    scipy
    pydantic
packages = find:


[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    sample-augment = sample_augment.main:main

;[tool:pytest]
;log_cli = true
;log_cli_level = INFO
;log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
;log_cli_date_format = %Y-%m-%d %H:%M:%S